# pascal

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: main.rs
src/commands/: help.rs  list.rs  mod.rs  play.rs  stop.rs
src/events/: autocomplete.rs  handler.rs  mod.rs  slash_commands.rs  voice.rs
src/utils/: config.rs  discord.rs  error.rs  fuzzy_lookup.rs  mod.rs  sound_files.rs
