[package]
name = "pascal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version= "0.10.8",  default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "voice", "cache"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
songbird = { version = "0.2.0", features = ["builtin-queue"] }
anyhow = "1.0.44"
log = "0.4.14"
env_logger = "0.9.0"